elephant-shed (1.2.1) UNRELEASED; urgency=medium

  [ Christoph Berg ]
  * Start prometheus-sql-exporter-restart.timer on package installation.

 -- Adrian Vondendriesch <adrian.vondendriesch@credativ.de>  Fri, 18 May 2018 17:50:17 +0200

elephant-shed (1.2) unstable; urgency=medium

  * This release bundles a series of breaking changes:
    + Upgrade to grafana 5 and prometheus 2. (Existing monitoring data is not
      migrated.)
    + Upgrade to prometheus-node-exporter 0.15.
    + Rewrite update-prometheus-sql-exporter-config using PgCommon.pm, and
      refactor its config file handling.
  * prometheus: Use 'localhost' as job_name to bundle this machine's node and
    sql exporter results. 'sql_job' contains the postgresql-common cluster
    name now.
  * The grafana dashboard has been updated to use rate() instead of increase()
    in most panels to show values per second or minute.

 -- Christoph Berg <christoph.berg@credativ.de>  Fri, 18 May 2018 17:06:21 +0200

elephant-shed (1.1.1) unstable; urgency=medium

  [ Adrian Vondendriesch ]
  * Split prometheus exporters into own packages.

  [ Alexander Sosna ]
  * Change docs build process to sphinx
  * grafana: Fix "Dead Tuples"
  * grafana: Fix "Locks"
  * grafana: Change limits for "Next Freeze"
  * grafana: Add tool tips

 -- Adrian Vondendriesch <adrian.vondendriesch@credativ.de>  Thu, 25 Jan 2018 17:00:25 +0100

elephant-shed (1.0) unstable; urgency=medium

  [ Christoph Berg ]
  * cockpit: Add cockpit-packagekit to Recommends.

  [ Adrian Vondendriesch ]
  * prometheus: Add sudo to dependencies.
  * portal: replace the way we show backups.
  * portal: rework UI, introduce bootstrap.

  [ Alexander Sosna ]
  * grafana: Fix for queries for Prometheus 2.0
  * portal: Use new Icons

  [ Caique de Castro ]
  * portal: Fix link to Grafana

 -- Adrian Vondendriesch <adrian.vondendriesch@credativ.de>  Mon, 16 Oct 2017 18:54:10 +0200

elephant-shed (0.9) unstable; urgency=medium

  * Team upload.