@@ -2,6 +2,7 @@ elephant-shed (1.2.1) UNRELEASED; urgency=medium
 
   [ Christoph Berg ]
   * Start prometheus-sql-exporter-restart.timer on package installation.
+  * Node exporter 0.16 renames many variables, update dashboard.
 
  -- Adrian Vondendriesch <adrian.vondendriesch@credativ.de>  Fri, 18 May 2018 17:50:17 +0200
 
